force-app/main/default/objects/Upload_Volunteer_Eligibility_Event__e/Upload_Volunteer_Eligibility_Event__e.object-meta.xml
<CustomObject>
    <label>Upload Volunteer Eligibility Event</label>
    <pluralLabel>Upload Volunteer Eligibility Events</pluralLabel>
</CustomObject>