force-app/main/default/objects/Upload_Volunteer_Eligibility_Event__e/fields/Document_Location__c.field-meta.xml
<CustomField>
    <fullName>Document_Location__c</fullName>
    <label>Document Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>