force-app/main/default/objects/Upload_Volunteer_Eligibility_Event__e/fields/getRecUserId__c.field-meta.xml
<CustomField>
    <fullName>getRecUserId__c</fullName>
    <label>getRecUserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>