force-app/main/default/objects/Upload_Volunteer_Eligibility_Event__e/fields/Volunteer_Name__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Name__c</fullName>
    <label>Volunteer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>